2010-03-11  Aaron Boodman  <aa@chromium.org>

        Kill WebDocument::applicationID() (part 1).

        Modify interface to WebCore::NotificationPresenter::checkPermission()
        and remove implementation of WebDocument::applicationID(). Breaking
        API changes will be in a subsequent change.
        https://bugs.webkit.org/show_bug.cgi?id=35846

        * public/WebNotificationPresenter.h:
        * src/NotificationPresenterImpl.cpp:
        (WebKit::NotificationPresenterImpl::checkPermission):
        * src/NotificationPresenterImpl.h:
        * src/WebDocument.cpp:
        (WebKit::WebDocument::applicationID):

2010-03-11  Stuart Morgan  <stuartmorgan@chromium.org>

        Reviewed by Darin Fisher.

        Fix the screen coordinate conversion of Chromium Mac mouse events for
        multiple-moniter setups. Also changes the global coordinate values
        to be computed from the event, rather than the instantaneous mouse
        location, and reduces code duplication for location conversion.

        Dual-sided patch with http://codereview.chromium.org/751002

        https://bugs.webkit.org/show_bug.cgi?id=35950

        * src/mac/WebInputEventFactory.mm:
        (WebKit::setWebEventLocationFromEventInView):
        (WebKit::WebInputEventFactory::mouseEvent):
        (WebKit::WebInputEventFactory::mouseWheelEvent):

2010-03-11  Anders Carlsson  <andersca@apple.com>

        Reviewed by David Hyatt.

        Remove invalidateContents, it isn't used and it never makes sense to only invalidate the contents.

        * src/ChromeClientImpl.cpp:
        * src/ChromeClientImpl.h:

2010-03-10  Darin Fisher  <darin@chromium.org>

        Reviewed by Jeremy Orlow.

        Use WebPrivatePtr for WebNode
        https://bugs.webkit.org/show_bug.cgi?id=36005

        * public/WebElement.h:
        * public/WebFormElement.h:
        * public/WebInputElement.h:
        * public/WebLabelElement.h:
        * public/WebNode.h:
        (WebKit::WebNode::WebNode):