@@ -1,3 +1,14 @@
+2010-03-12  Kavita Kanetkar  <kkanetkar@chromium.org>
+
+        Reviewed by Darin Fisher.
+
+        [chromium] Fix memory leak in WebImageDecoder API
+        https://bugs.webkit.org/show_bug.cgi?id=35946
+
+        * src/WebImageDecoder.cpp:
+        (WebKit::WebImageDecoder::setData):
+        (WebKit::WebImageDecoder::getFrameAtIndex):
+
 2010-03-11  Aaron Boodman  <aa@chromium.org>
 
         Kill WebDocument::applicationID() (part 1).
